hphp/hack/test/typecheck/lambda/variadics/lambda_application_incorrect_types.php.exp
File "lambda_application_incorrect_types.php", line 17, characters 33-35:
You are trying to access the member foo but this is not an object, it is a string (Typing[4062])
  File "lambda_application_incorrect_types.php", line 20, characters 12-18:
  Definition is here
File "lambda_application_incorrect_types.php", line 29, characters 12-18:
Invalid argument (Typing[4110])
  File "lambda_application_incorrect_types.php", line 27, characters 20-21:
  This is an object of type D (variadic argument)
  File "lambda_application_incorrect_types.php", line 29, characters 16-16:
  It is incompatible with an object of exactly the class C
File "lambda_application_incorrect_types.php", line 38, characters 33-35:
You are trying to access the member foo but this is not an object, it is an int (Typing[4062])
  File "lambda_application_incorrect_types.php", line 39, characters 39-39:
  Definition is here
